test/Fail/IUnivRecord.agda
open import Agda.Primitive.Cubical

record Bad : IUniv where
